--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -2,6 +2,22 @@
   position: relative;
   .hero{
     position: relative;
+    .bannerMask{
+      position: relative;
+      &:before{
+        position: absolute;
+        content: "";
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(32, 33, 35, 0.4);
+        // z-index: 100;
+        // opacity: 0;
+        transition: all 0.5s ease-in-out;
+        z-index: 10;
+      }
+    }
     .heroBody{
       position: absolute;
       left: 0;
@@ -9,6 +25,7 @@
       transform: translateY(-50%);
       width: 100%;
       height: 100%;
+      z-index: 20;
       &__container{
         margin: 0 auto;
         overflow-wrap: break-word;
@@ -25,13 +42,13 @@
         .heroTitle{
           color: $white;
           text-transform: uppercase;
-          line-height: 50px;
           font-weight: 500;
-          letter-spacing: 2%;
           margin: 0;
-          font-size: 26px;
+          font-size: 22px;
+          text-align: center;
           @media only screen and (min-width: $breakpoint_md) {
-            font-size: 48px;
+            letter-spacing: 1px;
+            font-size: 32px;
           }
         }
         .textBox{
