--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -60,6 +60,21 @@ button{
   }
 }
 
+.title-container{
+  text-align: center;
+  .title{
+    color: $primary;
+    display: inline-flex;
+    text-transform: uppercase;
+    border-bottom: 2px solid $secondary;
+    margin-bottom: 1rem;
+  }
+}
+
+p,li{
+  color: $primary;
+}
+
 h2,h3{
   color: $black;
 }
