--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -1,7 +1,4 @@
 .servicePanel{
   padding: 1rem 0;
-  .title{
-    text-align: center;
-    margin-bottom: 1rem;
-  }
+  background-color: $bg_default;
 }
