--- a/src/styles/settings.module.scss
+++ b/src/styles/settings.module.scss
@@ -5,30 +5,13 @@ $white: #FFFFFF;
 $bg_default: #F2F2F2;
 $bg_footer: #202123;
 
-$primary: #E84E1B;
-$red_tag: #FF0000;
-$red_error: #B72B1A;
-$danger_500: #D02B20;
-$yellow_star: #FCA549;
-$primary_tag: #FCEBE8;
-$green_tag: #EAF2ED;
-$green: #5CB176;
-$green_text: #2F6846;
-$bg_cream: #FFFCF3;
-$blue: #6361dd;
+$primary: #545454;
+$secondary: #5cd7cf;
+$green: #05a18c;
 
 $gray_default: #575756;
 $gray_border: #D1D1D1;
-$gray_description: #A9A9A9;
-$gray_dots: #9B9B9B;
-$gray_paragraph: #4A4A6A;
-$gray_paragraph_2: #5A6474;
-$gray_paragraph_3: #828282;
 $gray_divisor: #D1D1D1;
-$gray_divisor2: #E0E0E0;
-$gray_divisor3: #EDEDF0;
-$winch_modal: #FFF1EC;
-
 
 //buttons
 $button_secondary: #2E2E2E;
@@ -37,7 +20,6 @@ $fontFamilyPrimary: 'Roboto', sans-serif;
 // $fontFamilySecondary: 'DM Sans', sans-serif;
 
 //breakpoints MUI
-
 $breakpoint_sm: 600px;
 $breakpoint_md: 900px;
 $breakpoint_lg: 1200px;
