--- a/src/styles/settings.module.scss
+++ b/src/styles/settings.module.scss
@@ -4,6 +4,7 @@ $semi_black: #151515;
 $white: #FFFFFF;
 $bg_default: #F2F2F2;
 $bg_footer: #202123;
+$gray_300: #C0C0CF;
 
 $primary: #545454;
 $secondary: #5cd7cf;
