--- a/src/styles/slick-custom.scss
+++ b/src/styles/slick-custom.scss
@@ -1,34 +1,8 @@
-.slick-dots {
-  bottom: 20px !important;
-  z-index: 99;
-
-  li {
-    button {
-      &:before {
-        background-color: $white  !important;
-        width: 8px !important;
-        height: 8px !important;
-        border-radius: 100%;
-        margin: 0 auto;
-        content: "" !important;
-        top: 50%;
-        transform: translateY(-50%);
-        // display: none;
-      }
-    }
-
-    &.slick-active {
-      button {
-        &:before {
-          border: 4px solid $primary  !important;
-        }
-      }
-    }
-  }
-}
 
 .slick-container{
   position: relative;
+  padding: 1rem 0;
+  display: flex;
   &.relative{
     @media only screen and (max-width: $breakpoint_sm) {
       display: flex;
@@ -46,7 +20,7 @@
     background-color: $white;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 20;
+    z-index: 999;
     border: 1px solid $gray_300;
     padding: 2px;
     margin: 0;
@@ -57,10 +31,10 @@
     color: $primary;
     opacity: 0.7;
     &.left-arrow{
-      left: 0;
+      left: -16px;
     }
     &.right-arrow{
-      right: 0;
+      right: -16px;
     }
     &:hover {
       cursor: pointer;
