--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer{
-  background-color: $primary;
+  background-color: $secondary;
   padding: 60px 0;
-  border-top: 2px solid $secondary;
+  border-top: 2px solid $primary;
   p{
     color: $white;
     font-size: 0.9rem;
