--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,4 +1,4 @@
 .themeBar{
-  background-color: $primary !important;
-  border-bottom: 2px solid $secondary;
+  background-color: $secondary !important;
+  border-bottom: 2px solid $primary;
 }
