--- a/src/components/Purpose/Purpose.module.scss
+++ b/src/components/Purpose/Purpose.module.scss
@@ -20,6 +20,7 @@
         align-items: center;
         margin-bottom: 1rem;
         gap: 4px;
+        color: $secondary;
         svg{
           color: $green;
         }
