--- a/src/styles/settings.module.scss
+++ b/src/styles/settings.module.scss
@@ -6,8 +6,8 @@ $bg_default: #F2F2F2;
 $bg_footer: #202123;
 $gray_300: #C0C0CF;
 
-$primary: #353535;
-$secondary: #5cd7cf;
+$primary: #5cd7cf;
+$secondary: #353535;
 $green: #05a18c;
 
 $gray_default: #575756;
