--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -20,6 +20,9 @@
         margin: 0;
         span{
           font-weight: 700;
+          color: $white;
+          font-size: 0.9rem;
+          text-transform: uppercase;
         }
         li{
           font-weight: 400;
