--- a/src/components/Cards/ServiceCard/ServiceCard.module.scss
+++ b/src/components/Cards/ServiceCard/ServiceCard.module.scss
@@ -1,4 +1,5 @@
 .serviceCard{
+  transition: all .25s ease-in-out;
   box-shadow: 0 1px 12px rgb(0 0 0 / 7%);
   border-radius: 6px;
   display: flex;
@@ -9,9 +10,19 @@
   padding: 2rem 1rem;
   background-color: $white;
   svg{
-    color: $black;
+    color: $primary;
+    font-size: 3rem;
+  }
+  .title{
+    font-size: 1.2rem;
+    color: $secondary;
+    text-align: center;
+  }
+  &:hover{
+    cursor: pointer;
+    box-shadow: 0 1px 12px rgb(0 0 0 / 20%);
   }
   @media only screen and (min-width: $breakpoint_md) {
-    min-height: 300px;
+    min-height: 250px;
   }
 }
