--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -3,8 +3,11 @@
   background-color: $white;
   .formBox{
     border: 1px solid $primary;
-    padding: 4rem;
     border-radius: 16px;
+    padding: 3rem 2rem;
     margin: 2rem 0;
+  }
+  @media only screen and (min-width: $breakpoint_md) {
+    padding: 4rem;
   }
 }
