--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,22 +9,14 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: $bg_default;
+  font-family: $fontFamilyPrimary;
+  -webkit-font-smoothing: antialiased;
 }
 
 h1, h2, h3, h4, h5, h6, a, span, table, tr, td, li,  select, .MuiSelect-select {
   font-family: $fontFamilyPrimary;
   -webkit-font-smoothing: antialiased;
   margin: 0;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 a {
@@ -45,7 +37,6 @@ figure{
   margin: 0;
   padding: 0;
 }
-
 
 .img-responsive{
   max-width: 100%;
