--- a/src/components/Cards/ServiceCard/ServiceCard.module.scss
+++ b/src/components/Cards/ServiceCard/ServiceCard.module.scss
@@ -14,7 +14,7 @@
     font-size: 3rem;
   }
   .title{
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: $secondary;
     text-align: center;
   }
@@ -24,5 +24,8 @@
   }
   @media only screen and (min-width: $breakpoint_md) {
     min-height: 250px;
+    .title{
+      font-size: 1.2rem;
+    }
   }
 }
