--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -1,6 +1,6 @@
 .formPanel{
   padding: 2rem 0;
-  background-color: $green;
+  background-color: $secondary;
   border-radius: 16px 16px 0 0;
   .formBox{
     border: 1px solid $white;
