--- a/src/components/Purpose/Purpose.module.scss
+++ b/src/components/Purpose/Purpose.module.scss
@@ -8,6 +8,9 @@
     gap: 8px;
     justify-content: center;
     align-items: center;
+    max-width: 60%;
+    margin: 1rem auto 1.5rem;
+    text-align: center;
   }
   .bodyPanel{
     padding-top: 1rem;
