--- a/src/components/Cards/SupportCard/SupportCard.module.scss
+++ b/src/components/Cards/SupportCard/SupportCard.module.scss
@@ -11,7 +11,7 @@
       top: 0;
       right: 0;
       bottom: 0;
-      background: rgba(32, 33, 35, 0.6);
+      background: rgba(32, 33, 35, 0.4);
       transition: all 0.5s ease-in-out;
       z-index: 10;
     } 
@@ -53,5 +53,6 @@
     transform: translate(-50%, -50%);
     z-index: 20;
     color: $white;
+    text-align: center;
   }
 }
