--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -29,27 +29,34 @@
       &__container{
         margin: 0 auto;
         overflow-wrap: break-word;
-        gap: 1rem;
         height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
+        justify-content: center;
+        align-items: flex-start;
         padding: 0 1rem;
         @media only screen and (min-width: $breakpoint_md) {
           max-width: 80%;
         }
-        .heroTitle{
-          color: $white;
-          text-transform: uppercase;
-          font-weight: 500;
-          margin: 0;
-          font-size: 22px;
-          text-align: center;
-          padding-bottom: 3rem;
-          @media only screen and (min-width: $breakpoint_md) {
-            letter-spacing: 1px;
-            font-size: 32px;
+        .heroBox{
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          background-color: #0f0f0fa8;
+          padding: 1.5rem 1rem;
+          gap: 0.5rem;
+          width: 450px;
+          .heroTitle{
+            color: $white;
+            text-transform: uppercase;
+            font-weight: 600;
+            margin: 0;
+            font-size: 22px;
+            // padding-bottom: 3rem;
+            @media only screen and (min-width: $breakpoint_md) {
+              letter-spacing: 1px;
+              font-size: 36px;
+            }
           }
         }
         .textBox{
