--- a/src/components/Cards/ServiceCard/ServiceCard.module.scss
+++ b/src/components/Cards/ServiceCard/ServiceCard.module.scss
@@ -1,31 +1,63 @@
-.serviceCard{
-  transition: all .25s ease-in-out;
-  box-shadow: 0 1px 12px rgb(0 0 0 / 7%);
-  border-radius: 6px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-  padding: 2rem 1rem;
-  background-color: $white;
-  svg{
+.serviceCard {
+  // width: 200px;
+  min-height: 300px;
+  perspective: 1000px;
+  position: relative;
+  cursor: pointer;
+
+  &__inner {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+  }
+
+  &__face {
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: $white;
+    box-shadow: 0 1px 12px rgba(0,0,0,.07);
+    border-radius: 6px;
+  }
+
+  &__front {
+    // background-color: #3498db;
+    transform: rotateY(0deg);
+  }
+
+  &__back {
+    // background-color: #e74c3c;
+    transform: rotateY(180deg);
+    color: #fff;
+    font-size: 16px;
+    padding: 1rem 1.5rem;
+  }
+
+  svg {
     color: $primary;
     font-size: 3rem;
   }
-  .title{
+
+  .title {
     font-size: 1rem;
     color: $secondary;
     text-align: center;
   }
-  &:hover{
-    cursor: pointer;
-    box-shadow: 0 1px 12px rgb(0 0 0 / 20%);
+
+  .description {
+    color: $black;
   }
-  @media only screen and (min-width: $breakpoint_md) {
-    min-height: 250px;
-    .title{
-      font-size: 1.2rem;
-    }
+
+  &:hover .serviceCard__inner {
+    transform: rotateY(180deg);
   }
 }
+
+/* Resto de tus estilos */
