--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -2,6 +2,9 @@
   padding: 2rem 0;
   background-color: $bg_default;
   .servicesBox{
-    padding-top: 2rem;
+    padding-top: 1rem;
+    @media only screen and (min-width: $breakpoint_md) {
+      padding-top: 2rem;
+    }
   }
 }
