--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -45,7 +45,7 @@
           background-color: #0f0f0fa8;
           padding: 1.5rem 1rem;
           gap: 0.5rem;
-          width: 450px;
+          width: 100%;
           .heroTitle{
             color: $white;
             text-transform: uppercase;
@@ -53,7 +53,10 @@
             margin: 0;
             font-size: 22px;
             // padding-bottom: 3rem;
-            @media only screen and (min-width: $breakpoint_md) {
+          }
+          @media only screen and (min-width: $breakpoint_md) {
+            width: 450px;
+            .heroTitle{
               letter-spacing: 1px;
               font-size: 36px;
             }
