--- a/src/components/Cards/BrandCard/BrandCard.module.scss
+++ b/src/components/Cards/BrandCard/BrandCard.module.scss
@@ -1,14 +1,17 @@
 .brandCard{
-  overflow: hidden;
+  // overflow: hidden;
   display: flex;
   align-items: center;
   height: 100%;
   justify-content: center;
   &__mask{
+    display: flex;
+    align-items: center;
+    align-self: center;
     img{
-      // width: 100%;
-      // object-fit: cover;
-      // max-width: 75%;
+      width: 100%;
+      object-fit: cover;
+      max-width: 75%;
       height: auto;
       display: block;
       margin: 0 auto;
