new item servicios to menu

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -25,3 +25,11 @@
   max-width: 70%;
   margin: 0 auto; 
 }
+
+// NavBar.module.scss
+// .subMenu {
+//   position: absolute; // Asegúrate de que el contenedor padre tenga position: relative
+//   left: 100%; // Desplaza el menú a la derecha
+//   top: 0; // Alinea en la parte superior
+//   z-index: 1; // Asegúrate de que esté por encima de otros elementos
+// }
